; ModuleID = '/home/carl/AnghaBench/linux/drivers/parport/extr_parport_ip32.c_parport_ip32_fifo_write_block.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/parport/extr_parport_ip32.c_parport_ip32_fifo_write_block.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.parport = type { i32 }

@PARPORT_MODE_DMA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.parport*, i8*, i64)* @parport_ip32_fifo_write_block to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @parport_ip32_fifo_write_block(%struct.parport* %0, i8* %1, i64 %2) #0 {
  %4 = alloca %struct.parport*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store %struct.parport* %0, %struct.parport** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  store i64 0, i64* %7, align 8
  %8 = load i64, i64* %6, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %29

10:                                               ; preds = %3
  %11 = load %struct.parport*, %struct.parport** %4, align 8
  %12 = getelementptr inbounds %struct.parport, %struct.parport* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* @PARPORT_MODE_DMA, align 4
  %15 = and i32 %13, %14
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %22

17:                                               ; preds = %10
  %18 = load %struct.parport*, %struct.parport** %4, align 8
  %19 = load i8*, i8** %5, align 8
  %20 = load i64, i64* %6, align 8
  %21 = call i64 @parport_ip32_fifo_write_block_dma(%struct.parport* %18, i8* %19, i64 %20)
  br label %27

22:                                               ; preds = %10
  %23 = load %struct.parport*, %struct.parport** %4, align 8
  %24 = load i8*, i8** %5, align 8
  %25 = load i64, i64* %6, align 8
  %26 = call i64 @parport_ip32_fifo_write_block_pio(%struct.parport* %23, i8* %24, i64 %25)
  br label %27

27:                                               ; preds = %22, %17
  %28 = phi i64 [ %21, %17 ], [ %26, %22 ]
  store i64 %28, i64* %7, align 8
  br label %29

29:                                               ; preds = %27, %3
  %30 = load i64, i64* %7, align 8
  ret i64 %30
}

declare dso_local i64 @parport_ip32_fifo_write_block_dma(%struct.parport*, i8*, i64) #1

declare dso_local i64 @parport_ip32_fifo_write_block_pio(%struct.parport*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
